--- a/index.html
+++ b/index.html
@@ -3,10 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Путешествия по России</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
+  <div class="root">
+    <header class="header root__section">
+      <a href="#" class="header__logo link"></a>
+      <div class="header__lang-links">
+        <a href="#" class="header__lang-link header__lang-link_active link">Ru</a>
+        <a href="#" class="header__lang-link link">En</a>
+      </div>
+    </header>
 
+
+<!--      <div class="lead">
+
+    </div>
+
+    <div class="intro">
+
+    </div>
+
+    <div class="photo-grid">
+
+    </div>
+
+    <div class="places">
+
+    </div>
+
+    <div class="cover">
+
+    </div>
+
+    <footer class="footer">
+
+    </footer>-->
+
+
+  </div>
 </body>
 </html>
