--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="root">
-    <header class="header root__section">
+    <header class="header root__section header_padding_top_margin_bottom">
       <a href="#" class="header__logo link"></a>
       <div class="header__lang-links">
         <a href="#" class="header__lang-link header__lang-link_active link">Ru</a>
@@ -17,11 +17,18 @@
       </div>
     </header>
 
-
-<!--      <div class="lead">
-
+    <div class="lead lead_margin_bottom">
+      <h1 class="lead__title">Путешествия по России</h1>
+      <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+      <div class="lead__img_text">
+        <img src="./blocks/lead/images/lead__image.svg" alt="Женщина спит в плацкартном вагоне" class="lead__image">
+        <p class="lead__caption">ВАША ПОЛКА &#8212; ВЕРХНЯЯ</p>
+      </div>
     </div>
 
+
+
+<!--
     <div class="intro">
 
     </div>
