--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="lead root__section root__section_slim root__section_margin_bottom">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-      <img src="./blocks/lead/images/lead__image.svg" alt="Женщина спит в плацкартном вагоне" class="lead__image">
+      <img src="./blocks/lead/images/lead__image.webp" alt="Женщина спит в плацкартном вагоне" class="lead__image">
       <p class="lead__caption">ВАША ПОЛКА &#8212; ВЕРХНЯЯ</p>
     </div>
 
@@ -43,32 +43,21 @@
       </ul>
     </div>
 
-
-
-
-
-
-
-<!--
-    <div class="intro">
-
+    <div class="photo-grid root__section">
+      <img src="./blocks/photo-grid/images/1_train.webp" alt="вид из окна поезда" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/2_atharva-tulsi.webp" alt="вид на горы с неба" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/3_tuman.webp" alt="собака на стоге сена в тумане" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/4_sochi.webp" alt="лес на горе в тумане" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/5_arisa-chattasa.webp" alt="автомобиль на льду" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/6_baikal.webp" alt="берег Байкала летом" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/7_elbrus.webp" alt="заснеженные вершины Эльбруса" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/8_stanislav-kondratiev.webp" alt="берег" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/9_kamchatka.webp" alt="туман на Камчатке" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/10_kamchatka2.webp" alt="равнина и горы Качатки" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/11_baikal2.webp" alt="берег Байкала зимой" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/12_ergaki.webp" alt="природный парк Ергаки" class="photo-grid__item">
     </div>
 
-    <div class="photo-grid">
-
-    </div>
-
-    <div class="places">
-
-    </div>
-
-    <div class="cover">
-
-    </div>
-
-    <footer class="footer">
-
-    </footer>-->
 
 
   </div>
