--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       </div>
     </header>
 
-    <div class="lead root__section root__section_slim root__section_margin_bottom">
+    <section class="lead root__section root__section_slim root__section_margin_bottom">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <img src="./blocks/lead/images/lead__image.webp" alt="Женщина спит в плацкартном вагоне" class="lead__image">
       <p class="lead__caption">ВАША ПОЛКА &#8212; ВЕРХНЯЯ</p>
-    </div>
+    </section>
 
-    <div class="intro root__section root__section_slim  root__section_margin_bottom">
+    <section class="intro root__section root__section_slim root__section_margin_bottom">
       <h2 class="intro__title">Чего мы там не видели?</h2>
       <p class="intro__text">
         По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной
@@ -41,9 +41,9 @@
         <li><span class="intro__list_bold">Природных заповедников </span>105</li>
         <li><span class="intro__list_bold">Аэропортов </span>241</li>
       </ul>
-    </div>
+    </section>
 
-    <div class="photo-grid root__section">
+    <section class="photo-grid root__section root__section_margin_bottom">
       <img src="./blocks/photo-grid/images/1_train.webp" alt="вид из окна поезда" class="photo-grid__item">
       <img src="./blocks/photo-grid/images/2_atharva-tulsi.webp" alt="вид на горы с неба" class="photo-grid__item">
       <img src="./blocks/photo-grid/images/3_tuman.webp" alt="собака на стоге сена в тумане" class="photo-grid__item">
@@ -56,9 +56,114 @@
       <img src="./blocks/photo-grid/images/10_kamchatka2.webp" alt="равнина и горы Качатки" class="photo-grid__item">
       <img src="./blocks/photo-grid/images/11_baikal2.webp" alt="берег Байкала зимой" class="photo-grid__item">
       <img src="./blocks/photo-grid/images/12_ergaki.webp" alt="природный парк Ергаки" class="photo-grid__item">
-    </div>
+    </section>
 
+    <section class="places root__section root__section_slim root__section_margin_bottom">
+      <ul class="places__list">
+        <li class="places__place">
+          <h2 class="places__title">Куршская коса</h2>
+          <div class="places__website">
+            <p class="places__url-heading">URL</p>
+            <p class="places__url-value">park-kosa.ru</p>
+          </div>
+          <img src="./blocks/places/images/1_nikita-tikhomirov-1153188.webp" alt="Куршская коса" class="places__image">
+          <div class="places__description">
+            <p class="places__description-paragraph">
+              Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского
+              залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на
+              краю российского анклава.
+            </p>
+            <p class="places__description-paragraph">
+              На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по
+              соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших
+              приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах
+              стального, прохладного моря.
+            </p>
+          </div>
+        </li>
+        <li class="places__place">
+          <h2 class="places__title">Кольский</h2>
+          <div class="places__website">
+            <p class="places__url-heading">URL</p>
+            <p class="places__url-value">National Geographic</p>
+          </div>
+          <img src="./blocks/places/images/2_m-r-760504.webp" alt="" class="places__image">
+          <div class="places__description">
+            <p class="places__description-paragraph">
+              Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
+              тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
+            </p>
+            <p class="places__description-paragraph">
+              Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке.
+              Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии.
+              Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов
+              вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
+              в Мурманск.
+            </p>
+          </div>
+        </li>
+        <li class="places__place">
+          <h2 class="places__title">Алтай</h2>
+          <div class="places__website">
+            <p class="places__url-heading">URL</p>
+            <p class="places__url-value">Facebook</p>
+          </div>
+          <img src="./blocks/places/images/3_nail-gilfanov-527808.webp" alt="" class="places__image">
+          <div class="places__description">
+            <p class="places__description-paragraph">
+              Алтай — одно из красивейших мест в России.
+              В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные
+              реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних
+              мест — горным воздухом.
+            </p>
+            <p class="places__description-paragraph">
+              Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной
+              флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули.
+              И знаменитые манулы — тоже обитатели Алтайского края.
+            </p>
+          </div>
+        </li>
+        <li class="places__place">
+          <h2 class="places__title">Зимний Байкал</h2>
+          <div class="places__website">
+            <p class="places__url-heading">URL</p>
+            <p class="places__url-value">https://vk.com/baikalmile</p>
+          </div>
+          <img src="./blocks/places/images/4_sergey-pesterev-1156037.webp" alt="" class="places__image">
+          <div class="places__description">
+            <p class="places__description-paragraph">
+              Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник
+              пресной воды и одно из красивейших мест в России.
+            </p>
+            <p class="places__description-paragraph">
+              Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид
+              спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую
+              скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой
+              рекорд — 197.011 км/ч.
+            </p>
+          </div>
+        </li>
+        <li class="places__place">
+          <h2 class="places__title">Карелия</h2>
+          <div class="places__website">
+            <p class="places__url-heading">URL</p>
+            <p class="places__url-value">http://vodlozero.ru/</p>
+          </div>
+          <img src="./blocks/places/images/5_vladimir-fedotov-652306.webp" alt="" class="places__image">
+          <div class="places__description">
+            <p class="places__description-paragraph">
+              Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт
+              западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков
+              из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия.
+              Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном
+              лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли
+              помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
+            </p>
+          </div>
+        </li>
+      </ul>
 
+    </section>
 
   </div>
 </body>
