--- a/index.html
+++ b/index.html
@@ -165,6 +165,23 @@
 
     </section>
 
+    <section class="cover root__section root__section_margin_bottom">
+      <a class="cover__card" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <img src="./blocks/cover/images/cover_trains.webp" alt="поезда на закате" class="cover__background">
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <p class="cover__subtitle">
+          По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
+        </p>
+      </a>
+
+
+
+
+
+
+
+    </section>
+
   </div>
 </body>
 </html>
