--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
   <div class="root">
     <header class="header root__section header_padding_top_margin_bottom">
       <a href="#" class="header__logo link"></a>
+<!--      <ul class="header__items">
+        <li class="header__item"></li>
+        <li class="header__item"></li>
+      </ul>-->
+
+
       <div class="header__lang-links">
         <a href="#" class="header__lang-link header__lang-link_active link">Ru</a>
         <a href="#" class="header__lang-link link">En</a>
@@ -167,6 +173,8 @@
 
     <section class="cover root__section root__section_margin_bottom">
       <a class="cover__card" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+
+<!--        TODO картинку расширить-->
         <img src="./blocks/cover/images/cover_trains.webp" alt="поезда на закате" class="cover__background">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">
@@ -182,6 +190,26 @@
 
     </section>
 
+    <footer class="footer root__section">
+      <ul class="footer__items">
+        <li class="footer__item">
+          <a class="footer__link link" href="https://yandex.ru/maps">Карты</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link link" href="https://yandex.ru/pogoda">Погода</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link link" href="https://rasp.yandex.ru">Расписание</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link link" href="https://calendar.yandex.ru">Календарь</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link link" href="https://travel.yandex.ru">Путешествия</a>
+        </li>
+      </ul>
+      <p class="footer__copyright">&#169; 2022. Алексей Сахаров</p>
+    </footer>
   </div>
 </body>
 </html>
