add ul for list header & footer, fix image in cover

--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
   <div class="root">
     <header class="header root__section header_padding_top_margin_bottom">
       <a href="#" class="header__logo link"></a>
-<!--      <ul class="header__items">
-        <li class="header__item"></li>
-        <li class="header__item"></li>
-      </ul>-->
-
-
-      <div class="header__lang-links">
-        <a href="#" class="header__lang-link header__lang-link_active link">Ru</a>
-        <a href="#" class="header__lang-link link">En</a>
-      </div>
+      <ul class="header__items">
+        <li class="header__item">
+          <a href="#" class="header__lang-link header__lang-link_active link">Ru</a>
+        </li>
+        <li class="header__item">
+          <a href="#" class="header__lang-link link">En</a>
+        </li>
+      </ul>
     </header>
 
     <section class="lead root__section root__section_slim root__section_margin_bottom">
@@ -70,7 +68,9 @@
           <h2 class="places__title">Куршская коса</h2>
           <div class="places__website">
             <p class="places__url-heading">URL</p>
-            <p class="places__url-value">park-kosa.ru</p>
+            <a class="places__url-value link" href="http://park-kosa.ru">
+              park-kosa.ru
+            </a>
           </div>
           <img src="./blocks/places/images/1_nikita-tikhomirov-1153188.webp" alt="Куршская коса" class="places__image">
           <div class="places__description">
@@ -91,7 +91,9 @@
           <h2 class="places__title">Кольский</h2>
           <div class="places__website">
             <p class="places__url-heading">URL</p>
-            <p class="places__url-value">National Geographic</p>
+            <a class="places__url-value link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">
+              National Geographic
+            </a>
           </div>
           <img src="./blocks/places/images/2_m-r-760504.webp" alt="" class="places__image">
           <div class="places__description">
@@ -112,7 +114,9 @@
           <h2 class="places__title">Алтай</h2>
           <div class="places__website">
             <p class="places__url-heading">URL</p>
-            <p class="places__url-value">Facebook</p>
+            <a class="places__url-value link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">
+              Facebook
+            </a>
           </div>
           <img src="./blocks/places/images/3_nail-gilfanov-527808.webp" alt="" class="places__image">
           <div class="places__description">
@@ -133,7 +137,9 @@
           <h2 class="places__title">Зимний Байкал</h2>
           <div class="places__website">
             <p class="places__url-heading">URL</p>
-            <p class="places__url-value">https://vk.com/baikalmile</p>
+            <a class="places__url-value link" href="https://vk.com/baikalmile">
+              https://vk.com/baikalmile
+            </a>
           </div>
           <img src="./blocks/places/images/4_sergey-pesterev-1156037.webp" alt="" class="places__image">
           <div class="places__description">
@@ -153,7 +159,9 @@
           <h2 class="places__title">Карелия</h2>
           <div class="places__website">
             <p class="places__url-heading">URL</p>
-            <p class="places__url-value">http://vodlozero.ru/</p>
+            <a class="places__url-value link" href="http://vodlozero.ru">
+              http://vodlozero.ru/
+            </a>
           </div>
           <img src="./blocks/places/images/5_vladimir-fedotov-652306.webp" alt="" class="places__image">
           <div class="places__description">
@@ -168,26 +176,16 @@
           </div>
         </li>
       </ul>
-
     </section>
 
     <section class="cover root__section root__section_margin_bottom">
       <a class="cover__card" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-
-<!--        TODO картинку расширить-->
         <img src="./blocks/cover/images/cover_trains.webp" alt="поезда на закате" class="cover__background">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">
           По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
         </p>
       </a>
-
-
-
-
-
-
-
     </section>
 
     <footer class="footer root__section">
