--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       </ul>
     </header>
 
-    <section class="lead root__section root__section_slim root__section_margin_bottom">
+    <section class="lead root__section root__section_margin_bottom">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <img src="./blocks/lead/images/lead__image.webp" alt="Женщина спит в плацкартном вагоне" class="lead__image">
       <p class="lead__caption">ВАША ПОЛКА &#8212; ВЕРХНЯЯ</p>
     </section>
 
-    <section class="intro root__section root__section_slim root__section_margin_bottom">
+    <section class="intro root__section root__section_margin_bottom">
       <h2 class="intro__title">Чего мы там не видели?</h2>
       <p class="intro__text">
         По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной
@@ -62,7 +62,7 @@
       <img src="./blocks/photo-grid/images/12_ergaki.webp" alt="природный парк Ергаки" class="photo-grid__item">
     </section>
 
-    <section class="places root__section root__section_slim root__section_margin_bottom">
+    <section class="places root__section root__section_margin_bottom">
       <ul class="places__list">
         <li class="places__place">
           <h2 class="places__title">Куршская коса</h2>
