--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section class="lead root__section root__section_margin_bottom">
       <h1 class="lead__title">Путешествия по России</h1>
       <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-      <img src="./blocks/lead/images/lead__image.webp" alt="Женщина спит в плацкартном вагоне" class="lead__image">
+      <img src="./blocks/lead/images/lead-polka.jpg" alt="Женщина спит в плацкартном вагоне" class="lead__image">
       <p class="lead__caption">ВАША ПОЛКА &#8212; ВЕРХНЯЯ</p>
     </section>
 
@@ -38,28 +38,28 @@
         взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы
         выбрали и описали некоторые интересные места, достойные вашего отпуска.
       </p>
-      <ul class="intro__list">
-        <li><span class="intro__list_bold">Часовых поясов </span>11</li>
-        <li><span class="intro__list_bold">Объектов природного наследия ЮНЕСКО </span>12</li>
-        <li><span class="intro__list_bold">Объектов культурного наследия ЮНЕСКО </span>16</li>
-        <li><span class="intro__list_bold">Природных заповедников </span>105</li>
-        <li><span class="intro__list_bold">Аэропортов </span>241</li>
+      <ul class="intro__items">
+        <li><span class="intro__item intro__item_bold">Часовых поясов </span>11</li>
+        <li><span class="intro__item intro__item_bold">Объектов природного наследия ЮНЕСКО </span>12</li>
+        <li><span class="intro__item intro__item_bold">Объектов культурного наследия ЮНЕСКО </span>16</li>
+        <li><span class="intro__item intro__item_bold">Природных заповедников </span>105</li>
+        <li><span class="intro__item intro__item_bold">Аэропортов </span>241</li>
       </ul>
     </section>
 
     <section class="photo-grid root__section root__section_margin_bottom">
-      <img src="./blocks/photo-grid/images/1_train.webp" alt="вид из окна поезда" class="photo-grid__item">
-      <img src="./blocks/photo-grid/images/2_atharva-tulsi.webp" alt="вид на горы с неба" class="photo-grid__item">
-      <img src="./blocks/photo-grid/images/3_tuman.webp" alt="собака на стоге сена в тумане" class="photo-grid__item">
-      <img src="./blocks/photo-grid/images/4_sochi.webp" alt="лес на горе в тумане" class="photo-grid__item">
-      <img src="./blocks/photo-grid/images/5_arisa-chattasa.webp" alt="автомобиль на льду" class="photo-grid__item">
-      <img src="./blocks/photo-grid/images/6_baikal.webp" alt="берег Байкала летом" class="photo-grid__item">
-      <img src="./blocks/photo-grid/images/7_elbrus.webp" alt="заснеженные вершины Эльбруса" class="photo-grid__item">
-      <img src="./blocks/photo-grid/images/8_stanislav-kondratiev.webp" alt="берег" class="photo-grid__item">
-      <img src="./blocks/photo-grid/images/9_kamchatka.webp" alt="туман на Камчатке" class="photo-grid__item">
-      <img src="./blocks/photo-grid/images/10_kamchatka2.webp" alt="равнина и горы Качатки" class="photo-grid__item">
-      <img src="./blocks/photo-grid/images/11_baikal2.webp" alt="берег Байкала зимой" class="photo-grid__item">
-      <img src="./blocks/photo-grid/images/12_ergaki.webp" alt="природный парк Ергаки" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/photo-grid-train.jpg" alt="вид из окна поезда" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/photo-grid-atharva-tulsi.jpg" alt="вид на горы" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/photo-grid-tuman.jpg" alt="собака на сене в тумане" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/photo-grid-sochi.jpg" alt="лес на горе в тумане" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/photo-grid-arisa.jpg" alt="автомобиль на льду" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/photo-grid-baikal.jpg" alt="берег Байкала летом" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/photo-grid-elbrus.jpg" alt="вершины Эльбруса" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/photo-grid-kondratiev.jpg" alt="берег" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/photo-grid-kamchatka-1.jpg" alt="туман на Камчатке" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/photo-grid-kamchatka-2.jpg" alt="горы Камчатки" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/photo-grid-baikal-2.jpg" alt="берег Байкала зимой" class="photo-grid__item">
+      <img src="./blocks/photo-grid/images/photo-grid-ergaki.jpg" alt="природный парк Ергаки" class="photo-grid__item">
     </section>
 
     <section class="places root__section root__section_margin_bottom">
@@ -72,7 +72,7 @@
               park-kosa.ru
             </a>
           </div>
-          <img src="./blocks/places/images/1_nikita-tikhomirov-1153188.webp" alt="Куршская коса" class="places__image">
+          <img src="./blocks/places/images/place-kosa.jpg" alt="Куршская коса" class="places__image">
           <div class="places__description">
             <p class="places__description-paragraph">
               Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского
@@ -95,7 +95,7 @@
               National Geographic
             </a>
           </div>
-          <img src="./blocks/places/images/2_m-r-760504.webp" alt="" class="places__image">
+          <img src="./blocks/places/images/place-kolsky.jpg" alt="Скалистый заснеженный берег" class="places__image">
           <div class="places__description">
             <p class="places__description-paragraph">
               Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
@@ -118,7 +118,7 @@
               Facebook
             </a>
           </div>
-          <img src="./blocks/places/images/3_nail-gilfanov-527808.webp" alt="" class="places__image">
+          <img src="./blocks/places/images/place-altai.jpg" alt="Хвойный лес на Алтае" class="places__image">
           <div class="places__description">
             <p class="places__description-paragraph">
               Алтай — одно из красивейших мест в России.
@@ -141,7 +141,7 @@
               https://vk.com/baikalmile
             </a>
           </div>
-          <img src="./blocks/places/images/4_sergey-pesterev-1156037.webp" alt="" class="places__image">
+          <img src="./blocks/places/images/place-winter-baikal.jpg" alt="замерзший лед Байкала" class="places__image">
           <div class="places__description">
             <p class="places__description-paragraph">
               Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник
@@ -163,7 +163,7 @@
               http://vodlozero.ru/
             </a>
           </div>
-          <img src="./blocks/places/images/5_vladimir-fedotov-652306.webp" alt="" class="places__image">
+          <img src="./blocks/places/images/place-karelia.jpg" alt="лес и река в Карелии" class="places__image">
           <div class="places__description">
             <p class="places__description-paragraph">
               Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт
@@ -180,7 +180,7 @@
 
     <section class="cover root__section root__section_margin_bottom">
       <a class="cover__card" href="https://stampsy.com/na-elektrichkakh-do-baikala">
-        <img src="./blocks/cover/images/cover_trains.webp" alt="поезда на закате" class="cover__background">
+        <img src="./blocks/cover/images/cover-trains.jpg" alt="десятки поездов на закате" class="cover__background">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">
           По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
