--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="root">
-    <header class="header root__section header_padding_top_margin_bottom">
+    <header class="header header_margin-bottom root__section">
       <a href="#" class="header__logo link"></a>
       <ul class="header__items">
         <li class="header__item">
