--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       </section>
 
       <section class="cover root__section root__section_margin_bottom">
-        <a class="cover__card" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <a class="cover__card" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">
             По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.
@@ -197,19 +197,19 @@
       <nav class="footer__list">
         <ul class="footer__items">
           <li class="footer__item">
-            <a class="footer__link link" href="https://yandex.ru/maps">Карты</a>
+            <a class="footer__link link" href="https://yandex.ru/maps" target="_blank">Карты</a>
           </li>
           <li class="footer__item">
-            <a class="footer__link link" href="https://yandex.ru/pogoda">Погода</a>
+            <a class="footer__link link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
           </li>
           <li class="footer__item">
-            <a class="footer__link link" href="https://rasp.yandex.ru">Расписание</a>
+            <a class="footer__link link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
           </li>
           <li class="footer__item">
-            <a class="footer__link link" href="https://calendar.yandex.ru">Календарь</a>
+            <a class="footer__link link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
           </li>
           <li class="footer__item">
-            <a class="footer__link link" href="https://travel.yandex.ru">Путешествия</a>
+            <a class="footer__link link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
           </li>
         </ul>
       </nav>
